[package]
name = "boom"
version = "0.1.0"
edition = "2021"
authors = ["jordan4ibanez"]

# Always use the latest stable rust version in this project.
# You can update your rust version with: rustup update stable
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
# DO NOT allow unsafe code.
# unsafe_code = "forbid"

# These can be turned on and off for active development.
dead_code = "allow"
unused_variables = "allow"

[dependencies]
glam = "0.25.0"
rayon = "1.8.0"

sdl2 = { version = "0.36.0", features = ["bundled"] }
spin_sleep = "1.1.1"
